feat: added CORS support, implemented profiles
